--- a/hiragana/master-hiragana.html
+++ b/hiragana/master-hiragana.html
@@ -228,7 +228,7 @@
     const domain = "https://hobbuy-blog.github.io/voting";
     const urlParams = new URLSearchParams(window.location.search);
     const voteId = urlParams.get('id');
-    document.getElementById("master-jp").href = `${domain}/slave.html?${voteId}`;
+    document.getElementById("master-jp").href = `${domain}/master.html?${voteId}`;
     document.getElementById("master-en").href = `${domain}/en/master.html?${voteId}`;
 
     footerTab.addEventListener('click', () => {
