--- a/master.html
+++ b/master.html
@@ -228,8 +228,8 @@
     const domain = "https://hobbuy-blog.github.io/voting";
     const urlParams = new URLSearchParams(window.location.search);
     const voteId = urlParams.get('id');
-    document.getElementById("master-kana").href = `${domain}/hiragana/master-hiragana.html?${voteId}`;
-    document.getElementById("master-en").href = `${domain}/en/master.html?${voteId}`;
+    document.getElementById("master-kana").href = `${domain}/hiragana/master-hiragana.html?id=${voteId}`;
+    document.getElementById("master-en").href = `${domain}/en/master.html?id=${voteId}`;
 
     footerTab.addEventListener('click', () => {
       isOpen = !isOpen;
