--- a/en/join.html
+++ b/en/join.html
@@ -17,7 +17,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="./vote.js"></script>
-  <link rel="manifest" href="./../manifest.json">
+  <link rel="manifest" href="./manifest.json">
   
   <link rel="shortcut icon" href="./../images/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="./../images/apple-touch-icon-180x180.png" sizes="180x180">
