--- a/hiragana/master-hiragana.html
+++ b/hiragana/master-hiragana.html
@@ -19,7 +19,7 @@
   <script src="./../vote.js"></script>
   <!-- QRコード生成ライブラリ -->
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
-  <link rel="manifest" href="./../manifest.json">
+  <link rel="manifest" href="./manifest.json">
 
   <link rel="shortcut icon" href="./../images/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="./../images/apple-touch-icon-180x180.png" sizes="180x180">
