--- a/en/top.html
+++ b/en/top.html
@@ -59,13 +59,14 @@
     This service won't need you to prepare accounts, just need the Internet connection and devices.<br>
     Current status of voting will be shown real-timely.<br><br>
 
-    Please understand that there are many ways that not compatible so that the service is made for education (mainly).
+    Please understand that there are many ways that not compatible because the service is made for education (mainly).
   </p>
   <hr>
   <h3>Hosting a Vote</h3>
   <p>
     Click "Create a Vote (Master)" to start a vote.<br>
-    You had better note the url.
+    Please note the url when you start a vote.<br>
+    Noting the url is helpful for you to recover the vote.
   </p>
   <form onsubmit="newSession(event)">
     <label>Start from auto-generated ID: </label>
