--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08); font-weight: bold;">新しい投票を開始(マスター画面)</button>
   </form>
   <form onsubmit="enter(event)" style="margin-top: 4px;">
-    <label>カスタム投票IDで開始: <input type="text" id="joinId" style="height: 28px;" required></label>
+    <label>カスタム投票IDで開始: <input type="text" id="createId" style="height: 28px;" required></label>
     <button type="submit" style="background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">新しい投票を開始(マスター画面)</button>
   </form>
   <hr>
@@ -91,7 +91,7 @@
     }
     function enter(e) {
       e.preventDefault();
-      const id = document.getElementById('joinId').value.trim();
+      const id = document.getElementById('createId').value.trim();
       if(id) location.href = `master.html?id=${encodeURIComponent(id)}`;
     }
     function join(e) {
