--- a/en/join.html
+++ b/en/join.html
@@ -214,7 +214,7 @@
     <footer class="footer" id="footer">
       <div class="footer-content">
         <p>
-          <b><u>English</u></b> in use<br>
+          Current language : <b><u>English</u></b><br>
         <div class="footer-content">
           <a id="master-jp" class="button-link">日本語(漢字)に切り替える</a>
         </div>
