--- a/en/master.html
+++ b/en/master.html
@@ -74,12 +74,11 @@
   <form id="labelForm">
     <div id="labels"></div>
     <button type="submit" style="margin-top: 4px; background-color: #2196f3; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1.2rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">Save Item Names</button>
-    <button type="button" style="margin-top: 4px; background-color: #f50; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1.2rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);" onclick="resetVotes()">Reset the Number of Vote</button>
     <button 
       type="button" 
       style="margin-top: 4px; background-color: #f50; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1.2rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);" 
       onclick="resetVotes()">
-      Reset Duplicate Vote
+      Reset Vote
     </button>
   </form>
   <hr>
