--- a/hiragana/master-hiragana.html
+++ b/hiragana/master-hiragana.html
@@ -79,7 +79,7 @@
       type="button" 
       style="margin-top: 4px; background-color: #f50; color: #fff; border: none; border-radius: 10px; padding: 6px 16px; font-size: 1.2rem; cursor: pointer; transition: background 0.2s; box-shadow: 0 2px 6px rgba(0,0,0,0.08);" 
       onclick="resetVotes()">
-      重複投票リセット
+      投票リセット
     </button>
   </form>
   <hr>
