--- a/hiragana/master-hiragana.html
+++ b/hiragana/master-hiragana.html
@@ -214,7 +214,7 @@
         <p>
           <b><u><ruby>日本語<rt>にほんご</rt></ruby>(ひらがな)</u></b>を使用中<br>
           本ページはひらがな表示に対応しておりません．<br>
-          教職員向けの管理ページで，QRコードなどがひらがなユーザー向けの変更されています．<br>
+          教職員向けの管理ページで，QRコードなどがひらがなユーザー向けに変更されています．<br>
         <div class="footer-content">
           <a id="master-jp" class="button-link">日本語(漢字)に切り替える</a>
         </div>
