--- a/hiragana/top-hiragana.html
+++ b/hiragana/top-hiragana.html
@@ -22,7 +22,7 @@
 
   <title>オンラインとうひょうサービス(トップ)</title>
   <style>
-    body { font-family: sans-serif; }
+    body { font-family: sans-serif; padding-bottom: 60px;}
     #offline-notice {
       display: flex;
       flex-direction: column;
