--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <title>オンライン投票サービス(Top)</title>
   <style>
-    body { font-family: sans-serif; }
+    body { font-family: sans-serif; padding-bottom: 60px;}
     #offline-notice {
       display: flex;
       align-items: center;
