--- a/hiragana/master-hiragana.html
+++ b/hiragana/master-hiragana.html
@@ -26,7 +26,7 @@
   <link rel="icon" type="image/png" href="./../images/android-chrome-192x192.png" sizes="192x192">
 
   <style>
-    body { font-family: sans-serif; }
+    body { font-family: sans-serif; padding-bottom: 60px;}
     input[type="text"] { width: 300px; height: 28px; margin: 1px; font-size: 1.75em}
     #offline-notice {
       display: flex;
