--- a/slave.html
+++ b/slave.html
@@ -25,7 +25,7 @@
   <link rel="icon" type="image/png" href="images/android-chrome-192x192.png" sizes="192x192">
 
   <style>
-    body { font-family: sans-serif; }
+    body { font-family: sans-serif; padding-bottom: 60px;}
     .vote-btn {
       margin: 4px 0;
       text-decoration: bold, underline;
