--- a/hiragana/master-hiragana.html
+++ b/hiragana/master-hiragana.html
@@ -154,6 +154,7 @@
       padding: 10px 0;
       cursor: pointer;
       position: relative;
+      font-size: 1rem;
       z-index: 2;
       pointer-events: auto;
       box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
